style.css
body {
    margin: 0;
    padding: 0;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

.logo {
    color: #F9FAF8;
    font-size: 24px;
}

.header {
    display: flex;
    flex-direction: column;
    padding-top: 10px;
    padding-left: 250px;
    padding-right: 250px;
    font-family: "Roboto", sans-serif;
    background-color: #1F2937;
}

.container-1 {
    display: flex;
    justify-content: space-between;
    padding-bottom: 100px;
}

.links {
    display: flex;
    gap: 20px;
}

.links a:hover {
    color: #3882F6;
}

.container-2 {
    display: flex;
    justify-content: space-between;
    padding-left: 10%;
    padding-right: 10%;
    padding-bottom: 150px;
    flex-wrap: wrap;
}

.main-title {
    display: flex;
    flex-direction: column;
    max-width: 450px;
    width: 100%;
}

.main-title h1 {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
    margin-bottom: 8px;
}

.main-title p {
    color: #E5E7EB;
    font-size: 18px;
    margin-top: 0;
    margin-bottom: 24px;
}

.main-image {
    display: flex;
    width: 450px;
    max-width: 100%;
    height: 250px;
    max-height: 100%;
    background-color: rgb(153, 153, 153);
    color: #E5E7EB;
    flex-shrink: 0;

    /* wlasciwosci pod tym tylko na chwile, dzialaja na tekst w srodku */
    justify-content: center;
    align-items: center;
}

button {
    width: 120px;
    padding: 10px;
    border-radius: 10px;
    color: #F9FAF8;
    background-color: #3882F6;
    border-color: #3882F6;
    cursor: pointer;
}



.body-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: sans-serif;
}

.header-inf-text {
    color: #1F2937;
    font-size: 36px;
    font-weight: 900;
    padding-top: 20px;
    padding-bottom: 20px;
}

.cards {
    display: flex;
    gap: 50px;
    flex-wrap: wrap;
    padding-bottom: 150px;
}

.card-container {
    border: 4px solid #3882F6;
    border-radius: 20px;
    display: flex;
    height: 150px;
    width: 150px;
}

.card-1 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.quote-container {
    background-color: #E5E7EB;
    width: 100%;
    height: 500px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-wrap: wrap;
}

.quote {
    font-size: 36px;
    color: #1F2937;
    font-weight: 300;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-left: 25%;
    padding-right: 25%;
}

.quote-signature {
    font-size: 20px;
    font-weight: bold;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding-right: 30%;
}

.call-to-action-container {
    width: 100%;
    height: 400px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.call-to-action {
    border: 2px solid #3882F6;
    background-color: #3882F6;
    border-radius: 15px;
    height: 150px;
    width: 55%;
    display: flex;
}

.p1,
.p2 {
    margin: 0;
    padding-left: 20%;
}

.p1 {
    color: white;
    font-size: 20px;
    font-weight: bold;
}

.p2 {
    color: rgb(222, 222, 222);
}


.left-side {
    width: 70%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.right-side {
    width: 30%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.right-side button {
    border-color: white;
    font-weight: bold;
    font-size: 14px;
}


.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 80px;
    background-color: #1F2937;
    color: white;
    font-family: sans-serif;
    font-weight: 300;
    font-size: 14px;
}

